# rig

./: .gitignore  Dockerfile  README.md  config.yaml  healthcheck.sh  pyproject.toml  smoketest.sh
docs/: rig-components.puml  rig-sequence.puml
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  rbac.yaml  secret.yaml.example  service.yaml
k8s/smoke/: namespace.yaml  rig-configmap.yaml  smoke-job.yaml
rig/: __init__.py  admin.py  app.py  config.py  exchange_cache.py  headers.py  identity.py  jwt_validator.py  logging.py  policy.py  proxy.py  reauth.py  revocation.py  token_exchange.py  tracing.py
smoketest/docker/: config.yaml  docker-compose.yaml  smoke.sh
smoketest/k8s/: iri-smoke-job.yaml  rig.yaml  smoke-job.yaml  upstream.yaml
tests/: test_proxy.py  test_token_exchange.py
