[project]
name = "rig"
version = "0.1.0"
description = "Resource Integration Gateway — stateless reverse proxy + identity broker for IRI Facility APIs"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "httpx[http2]",
    "uvicorn[standard]",
    "pydantic-settings",
    "pyyaml",
    "kubernetes_asyncio",
    "boto3",
    "pyjwt[crypto]>=2.8",
    "redis>=5.0",
    "dnspython>=2.4",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
rig = "rig.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rig"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
